// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli — JSON output shape (default) > gzipped CDXJ JSON snapshot 1`] = `
{
  "entries": [
    {
      "compressionMethod": 0,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "archive/data.warc.gz",
      "present": true,
      "uncompressedSize": 246,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [
        {
          "rule": "cdxj/index-not-gzipped",
          "severity": "warning",
        },
      ],
      "path": "indexes/index.cdxj.gz",
      "present": true,
      "uncompressedSize": 154,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
        "wacz-spec",
      ],
      "expectedSection": "5.2.3",
      "issues": [],
      "path": "pages/pages.jsonl",
      "present": true,
      "uncompressedSize": 215,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "fuzzy.json",
      "present": true,
      "uncompressedSize": 18,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "wacz-spec",
      ],
      "expectedSection": "5.2.4",
      "issues": [],
      "path": "datapackage.json",
      "present": true,
      "uncompressedSize": 1076,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [],
      "issues": [],
      "path": "datapackage-digest.json",
      "present": true,
      "uncompressedSize": 118,
    },
  ],
  "issues": [
    {
      "conformance": "MUST",
      "details": {
        "acceptedSuffixes": [
          ".cdx",
          ".cdxj",
          ".idx",
        ],
        "allIndexEntries": [
          "indexes/index.cdxj.gz",
        ],
      },
      "docs": [
        {
          "label": "WACZ §indexes",
          "url": "https://specs.webrecorder.net/wacz/1.1.1/#indexes",
        },
      ],
      "location": {
        "entry": "indexes/",
      },
      "message": "No wabac-recognised index file found under indexes/ — wabac.js needs at least one .cdx / .cdxj / .idx entry to serve any URL",
      "messageKey": "cdxj/index-recognised-by-wabac.no-index",
      "rule": "cdxj/index-recognised-by-wabac",
      "severity": "error",
    },
    {
      "conformance": "MAY",
      "docs": [
        {
          "label": "WACZ §indexes",
          "url": "https://specs.webrecorder.net/wacz/1.1.1/#indexes",
        },
      ],
      "location": {
        "entry": "indexes/index.cdxj.gz",
      },
      "message": "Entry "indexes/index.cdxj.gz" is a gzipped CDXJ — wabac.js does not recognise .cdxj.gz / .cdx.gz",
      "messageKey": "cdxj/index-not-gzipped.gzipped-entry",
      "params": {
        "name": "indexes/index.cdxj.gz",
      },
      "rule": "cdxj/index-not-gzipped",
      "severity": "warning",
    },
  ],
  "profile": "spec",
  "source": {
    "kind": "file",
    "path": "<tmp>/fixture.wacz",
  },
  "stats": {
    "hosts": [],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 1,
    "info": 0,
    "passed": 19,
    "warnings": 1,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — JSON output shape (default) > missing-profile JSON snapshot 1`] = `
{
  "entries": [
    {
      "compressionMethod": 0,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "archive/data.warc.gz",
      "present": true,
      "uncompressedSize": 246,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "indexes/index.cdxj",
      "present": true,
      "uncompressedSize": 190,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
        "wacz-spec",
      ],
      "expectedSection": "5.2.3",
      "issues": [],
      "path": "pages/pages.jsonl",
      "present": true,
      "uncompressedSize": 215,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "fuzzy.json",
      "present": true,
      "uncompressedSize": 18,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "wacz-spec",
      ],
      "expectedSection": "5.2.4",
      "issues": [
        {
          "rule": "datapackage/profile-required",
          "severity": "error",
        },
      ],
      "path": "datapackage.json",
      "present": true,
      "uncompressedSize": 1041,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [],
      "issues": [],
      "path": "datapackage-digest.json",
      "present": true,
      "uncompressedSize": 118,
    },
  ],
  "issues": [
    {
      "conformance": "MUST",
      "details": {
        "expected": "data-package",
      },
      "docs": [
        {
          "label": "WACZ §datapackage.json",
          "url": "https://specs.webrecorder.net/wacz/1.1.1/#datapackage-json",
        },
        {
          "label": "Frictionless Data Package",
          "url": "https://specs.frictionlessdata.io/data-package/",
        },
      ],
      "location": {
        "entry": "datapackage.json",
      },
      "message": "datapackage.json is missing the "profile" field",
      "messageKey": "datapackage/profile-required.missing-field",
      "params": {
        "entry": "datapackage.json",
      },
      "rule": "datapackage/profile-required",
      "severity": "error",
    },
  ],
  "profile": "spec",
  "source": {
    "kind": "file",
    "path": "<tmp>/fixture.wacz",
  },
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 1,
    "info": 0,
    "passed": 19,
    "warnings": 0,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — JSON output shape (default) > valid WACZ JSON snapshot 1`] = `
{
  "entries": [
    {
      "compressionMethod": 0,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "archive/data.warc.gz",
      "present": true,
      "uncompressedSize": 246,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "indexes/index.cdxj",
      "present": true,
      "uncompressedSize": 190,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
        "wacz-spec",
      ],
      "expectedSection": "5.2.3",
      "issues": [],
      "path": "pages/pages.jsonl",
      "present": true,
      "uncompressedSize": 215,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "datapackage",
      ],
      "issues": [],
      "path": "fuzzy.json",
      "present": true,
      "uncompressedSize": 18,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [
        "wacz-spec",
      ],
      "expectedSection": "5.2.4",
      "issues": [],
      "path": "datapackage.json",
      "present": true,
      "uncompressedSize": 1070,
    },
    {
      "compressionMethod": 8,
      "expectedBy": [],
      "issues": [],
      "path": "datapackage-digest.json",
      "present": true,
      "uncompressedSize": 118,
    },
  ],
  "issues": [],
  "profile": "spec",
  "source": {
    "kind": "file",
    "path": "<tmp>/fixture.wacz",
  },
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 0,
    "info": 0,
    "passed": 20,
    "warnings": 0,
  },
  "valid": true,
  "waxlensVersion": "0.0.0",
}
`;
